--- a/klv-pechi/src/app/globals.css
+++ b/klv-pechi/src/app/globals.css
@@ -39,8 +39,8 @@ a {
   display: none !important;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
