--- a/klv-pechi/src/components/Header/Header.module.scss
+++ b/klv-pechi/src/components/Header/Header.module.scss
@@ -71,12 +71,12 @@
 .actions {
   display: flex;
   align-items: center;
-  gap: clamp(12px, 2vw, 20px);
+  gap: clamp(16px, 2vw, 20px);
 }
 
 .icon {
   position: relative;
-  font-size: clamp(17px, 1.7vw, 21px);
+  font-size: 23px;
   color: white;
   transition: color 0.2s;
 
@@ -119,7 +119,7 @@
   background: none;
   border: none;
   color: white;
-  font-size: clamp(20px, 2vw, 22px);
+  font-size: 22px;
   cursor: pointer;
 
   @media (max-width: 768px) {
