--- a/klv-pechi/src/components/ProductPageClient/ProductPageClient.module.scss
+++ b/klv-pechi/src/components/ProductPageClient/ProductPageClient.module.scss
@@ -1,5 +1,5 @@
 .section {
-  margin-top: 100px;
+  margin: 100px auto 30px;
 }
 
 .sectionBox {
@@ -12,7 +12,7 @@
   border: 1px solid rgba(255, 255, 255, 0.05);
   border-radius: 24px;
   padding: 32px 48px;
-  margin: 0 auto 32px;
+  margin: 0 auto 10px;
   box-shadow: 0 0 40px rgba(255, 60, 0, 0.05);
 }
 
@@ -31,6 +31,10 @@
 }
 
 @media (max-width: 768px) {
+  .section {
+    margin: 100px 0 30px;
+  }
+
   .sectionBox {
     padding: 24px;
   }
