--- a/klv-pechi/src/components/Header/Header.module.scss
+++ b/klv-pechi/src/components/Header/Header.module.scss
@@ -3,7 +3,8 @@
   top: 0;
   width: 100%;
   height: clamp(60px, 8vw, 85px);
-  background: #111;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
   color: white;
   z-index: 100;
   box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
