--- a/klv-pechi/src/components/GalleryModal/GalleryModal.module.scss
+++ b/klv-pechi/src/components/GalleryModal/GalleryModal.module.scss
@@ -23,14 +23,29 @@
 
 .close {
   position: absolute;
-  top: 12px;
-  right: 12px;
-  border: none;
-  background: none;
-  font-size: 32px;
+  top: 10px;
+  right: 10px;
+  width: 44px;
+  height: 44px;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  border-radius: 12px;
+  background: rgba(31, 30, 30, 0.644);
   color: #fff;
+  font-size: 28px;
+  line-height: 1;
   cursor: pointer;
-  z-index: 10;
+  z-index: 100;
+  transition: transform 0.15s ease, background 0.15s ease,
+    border-color 0.15s ease;
+
+  &:hover {
+    background: rgba(255, 255, 255, 0.12);
+    border-color: rgba(255, 255, 255, 0.16);
+    transform: scale(1.02);
+  }
+  &:active {
+    transform: scale(0.98);
+  }
 }
 
 .photoSwiper {
