--- a/klv-pechi/src/components/VideoShorts/VideoReview.module.scss
+++ b/klv-pechi/src/components/VideoShorts/VideoReview.module.scss
@@ -56,7 +56,8 @@
   overflow: hidden;
   cursor: pointer;
   background: #0f0f0f;
-  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5),
+  box-shadow:
+    0 20px 60px rgba(0, 0, 0, 0.5),
     0 0 0 1px rgba(255, 255, 255, 0.06) inset;
 
   @media (max-width: 900px) {
@@ -148,6 +149,7 @@
   width: 100%;
   height: 100%;
   display: block;
+  object-fit: cover;
 }
 .frame {
   border: 0;
